--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <!-- Top Bar -->
     <div class="bg-pink-100 text-pink-800 text-sm py-2 px-4 flex justify-between items-center">
         <div>
-            <i class="fas fa-phone-alt mr-1"></i> (XX) XXXX-XXXX
-            <i class="fas fa-envelope ml-3 mr-1"></i> contato@ennycardosomodas.com.br
+            <i class="fas fa-phone-alt mr-1"></i> (91)  982125497
+            <i class="fas fa-envelope ml-3 mr-1"></i> contato@ennycardosomodas@gmailcom
         </div>
         <div class="flex space-x-4">
             <a href="#"><i class="fab fa-facebook-f hover:text-pink-600"></i></a>
